@@ -19,7 +19,7 @@ JHtml::addIncludePath(JPATH_COMPONENT.DS.'helpers'.DS.'html');
 		<div style="float: right">
 			<button type="button" onclick="Joomla.submitform('save', this.form);window.top.setTimeout('window.parent.document.getElementById(\'sbox-window\').close()', 700);">
 				<?php echo JText::_('Save');?></button>
-			<button type="button" onclick="window.parent.document.getElementById('sbox-window').close();">
+			<button type="button" onclick="window.parent.SqueezeBox.close();">
 				<?php echo JText::_('Cancel');?></button>
 		</div>
 		<div class="configuration" >
@@ -31,7 +31,7 @@ JHtml::addIncludePath(JPATH_COMPONENT.DS.'helpers'.DS.'html');
 		<legend>
 			<?php echo JText::_('Configuration');?>
 		</legend>
-		<?php echo $params->render();?>
+		<?php echo $this->params->render();?>
 	</fieldset>
 
 	<input type="hidden" name="id" value="<?php echo $this->component->id;?>" />
